Adding ref to project from another repo

--- a/Orange.Sample.Web/Orange.Sample.Web.csproj
+++ b/Orange.Sample.Web/Orange.Sample.Web.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Orange.Common\Orange.Common.Helper\Orange.Common.Helper.csproj" />
+  </ItemGroup>
+
 </Project>
